connecting the about file to index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>This is a heading</h1>
     <p>This is a paragraph. </p>
     <p>Click <a href="http://google.com">here</a> to visit Google.</p>
+    <p>About Me <a href="about.html"> </p>
 
 </body>
 </html>
