attempting to add file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1>This is a heading</h1>
     <p>This is a paragraph. </p>
     <p>Click <a href="http://google.com">here</a> to visit Google.</p>
-    <p>About Me <a href="about.html"></p>
+    <p>About Me <a href="file:///C:/Users/nazne/OneDrive/Documents/GitHub/jnazneen.github.io/about.html"></p>
 
 </body>
 </html>
