--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Title</title>
+    <title>index.html.jnazneen</title>
 </head>
 <body>
-    <h1>This is a heading</h1>
-    <p>This is a paragraph. </p>
-    <p>Click <a href="http://google.com">here</a> to visit Google.</p>
-    <p>About Me <a href="file:///C:/Users/nazne/OneDrive/Documents/GitHub/jnazneen.github.io/about.html"></p>
+    <h1>The Wonderous Worlds of Nothing</h1>
+    <p>This website is not about anything but it can also be about everything. We shall see what this website will become. </p>
+    <p> Birds are the best </p>
+    <p>Click <a href="http://google.com">here</a> to visit Google and learn about the world. </p>
+    <p>About Me <a href="about.html"></p>
 
 </body>
 </html>
