--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <p>This website is not about anything but it can also be about everything. We shall see what this website will become. </p>
     <p> Birds are the best </p>
     <p>Click <a href="http://google.com">here</a> to visit Google and learn about the world. </p>
-    <p>About Me <a href="about.html"></p>
+    <p>About Me <a href="/about.html"></p>
 
 </body>
 </html>
