--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>The Wonderous World of <u>Nothing</u></title>
 </head>
-<body style="background-color:black;">
-    <h1>The Wonderous World of Nothing</h1>
+<body>
+    <h1 >The Wonderous World of Nothing</h1>
     <p>This website is not about anything but it can also be about everything. We shall see what this website will become. </p>
     <p> Everyone should know that birds are the best. Dogs and cats are also great along will all other animals in the world but birds that the highest species.</p>
     <p>Click <a href="http://google.com">here</a> to visit Google and develop different curiosities. </p>
