--- a/about.html
+++ b/about.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<title>The Part of <u>Nothing</u></title>
-<body style="background-color:purple;">
-	<p> Parts of the world are:</p>
+<body style="background-color:lightcoral;">
+	<p> <h1>Parts of the world are:</h1></p>
 	<ul>
 		<li>Black</li>
 		<li>White </li>
