--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>The Wonderous World of <u>Nothing</u></title>
+    <title>The Wonderous World of Nothing</title>
 </head>
 <body>
     <h1 >The Wonderous World of Nothing</h1>
