--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 	<p> <h1>Parts of the world are:</h1></p>
 	<ul>
 		<li>Black</li>
-		<img src="https://images.prismic.io/blackdiamond-web/119d93bb-f233-40fa-a8f6-176f0ff95524_F20_Pledge-Diamond_2880x1620.jpg?auto=compress,format&rect=77,135,2473,1391&w=2880&h=1620">
+		<img src="https://images.prismic.io/blackdiamond-web/119d93bb-f233-40fa-a8f6-176f0ff95524_F20_Pledge-Diamond_2880x1620.jpg?auto=compress,format&rect=77,135,2473,1391&w=2880&h=1620" height="240" width="120">
 		<li>White </li>
 		<img src="https://m.media-amazon.com/images/I/51UW1849rJL._AC_SX679_.jpg">
 	<h5><b>AND MOST IMPORTANTTLY </b></h5>
